--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "reactflow": "^11.10.3",
     "rxdb": "^16.19.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "terser": "^5.44.1"
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "prepare": "husky",
@@ -94,6 +93,7 @@
     "@axe-core/playwright": "^4.10.2",
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.56.0",
+    "@swc/core": "^1.15.3",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
